--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
-    <title>newdaily</title>
+    <meta name="referrer" content="no-referrer" />
+    <link rel="stylesheet" href="animate.css">
+    <script src="wow.js"></script>
+    <script>
+        new WOW().init();
+    </script>
+    <title>mydaily</title>
   </head>
   <body>
     <noscript>
-      <strong>We're sorry but newdaily doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
+      <strong>We're sorry but mydaily doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
     <!-- built files will be auto injected -->
